--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(button-buzzer button-buzzer.c inc/buzzer.c )
+add_executable(button-buzzer button-buzzer.c inc/buzzer.c tests/buzzer_test.c)
 
 pico_set_program_name(button-buzzer "button-buzzer")
 pico_set_program_version(button-buzzer "0.1")
